# ai-tour-guide-rn

./: .env  .env.example  .gitignore  README.md  TODO.md  app.json  cesconfig.jsonc  metro.config.js  package-lock.json  package.json  svg.d.ts  tsconfig.json
.trae/: TODO.md
app/: +not-found.tsx  .env.example  _layout.tsx  app.json  cesconfig.jsonc  eas.json  help.tsx  login.tsx  map.tsx  modal.tsx  package-lock.json  package.json  settings.tsx  splash.tsx  tour-history.tsx  tour.tsx
app/(appLayout)/: _layout.tsx  help.tsx  map.tsx  settings.tsx  tour-history.tsx  tour.tsx
app/(tabs)/: _layout.tsx  create.tsx  index.tsx  profile.tsx
app/app/: _layout.tsx  camera.tsx  history.tsx  index.tsx  lecture.tsx  profile.tsx
app/create-photo/: capture.tsx  confirm.tsx  progress.tsx
app/data/: data.tsx
app/hooks/: useCamera.ts  useGuideStream.ts
app/lib/: api.ts  audio-stream-player.ts  audio.ts  device.ts  expo-go-detector.ts  storage.ts  stream.ts  tokens.ts  websocket-client.ts
app/state/: guide.store.ts  history.store.ts
app/styles/: camera.styles.ts  lecture.styles.ts
app/types/: schema.ts
docs/: frontend-dev.md  product-requirements.md  v0.1.0-speed-and-quality.md
server/: .env.example  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
server/src/: main.py
server/src/api/: cookies.py  deps.py
server/src/api/v1/: auth.py  devices.py  guide.py  users.py
server/src/controllers/: auth_controller.py  device_controller.py  user_controller.py
server/src/core/: config.py  logging.py  supabase.py
server/src/mappers/: device_mapper.py  guide_mapper.py  user_mapper.py
server/src/models/: db_models.py  guide_models.py
server/src/schemas/: auth.py  chat.py  common.py  devices.py  guide.py  settings.py  store.py  user_schema.py
server/src/services/: orchestrator.py  vision.py
server/supabase/: config.toml
server/supabase/migrations/: 20240101000000_initial_schema.sql  20250912120000_create_guide_tables.sql
src/context/: AuthContext.tsx  CreateTourContext.tsx  index.ts
src/hooks/: index.ts
src/lib/: env.ts  fetcher.ts  index.ts  (+4 more)
types/: env.d.ts  index.ts
(+110 files in other folders)
