# pyproject.toml

[build-system]
# Specifies the build backend that tools like `pip` and `uv` will use to build the project.
# Hatchling is a modern, fast, and standard-compliant build backend.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-tour-guide-backend"
version = "0.1.0"
description = "A FastAPI + Supabase backend implementation following clean architecture principles."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

# Core dependencies parsed from your requirements.txt
dependencies = [
    "aiohttp>=3.9.0",
    "aiosmtplib>=2.0.0",
    "alembic>=1.12.0",
    "apscheduler>=3.10.0",
    "dateutils>=0.6.12",
    "email-validator>=2.1.0",
    "fastapi[all]>=0.104.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.23.0",
    "httpx[socks]>=0.25.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "any-llm-sdk[openai]>=0.0.26",
    "openai>=1.40.0",
    "uvicorn[standard]>=0.24.0",
    "validators>=0.22.0",
]

[project.optional-dependencies]
# Optional dependencies for development, installable with `uv pip install -e ".[dev]"`
dev = [
    "black",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
# Tells the build system that your package code is located in the `src` directory.
# This ensures that when the project is installed, you can still do `from src.main import app`.
packages = ["src"]